# GEMS-ViewsBuilder

./: .gitignore  .pre-commit-config.yaml  =1.0.0  AUTHORS.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yml  tests.yml
docs/: 00-overview.md
docs/adr/: 001-location-taxonomy-hierarchy.md  002-filter-cardinality.md  003-get-location-ownership.md  004-study-layout-flexibility.md  005-terms-operator-weighted.md  006-taxonomy-partial-order.md  007-consistency-check-strategy.md  008-view-config-taxonomy-field.md
docs/input-data/: 01-concepts.md  02-input-files.md  03-catalog-specification.md  04-view-config-specification.md  05-consistency-rules.md
docs/pipeline/: 01-pipeline.md  02-validation-and-checks.md  03-output-schema.md
examples/flexibility_analysis_fr/: calendar_file.csv  catalog.yml  flexibility_analysis.yml  generate_synthetic_view.py  synthetic_fr_2035_view.parquet  view_config.yml
gems_views_builder/: __init__.py  __main__.py  aggregator.py  base_model.py  calendar.py  catalog.py  cli.py  common.py  input_validator.py  library.py  loader.py  merged_view.py  metric_structure_table.py  metric_view.py  metrics.py  metrics_builder.py  metrics_structure_builder.py  simulation_table.py  system.py  taxonomy.py  terms_aggregator.py  time_aggregator.py  view.py  views.py  views_builder.py  writer.py
gems_views_builder/engines/: __init__.py  base.py  duckdb_engine.py  polars_engine.py  pyarrow_engine.py  spark_engine.py
gems_views_builder/input/: __init__.py  calendar.py  catalog.py  input_data.py  library.py  simulation_table.py  system.py  taxonomy.py  view_config.py
gems_views_builder/validation/: __init__.py  catalog_taxonomy_validator.py  study_layout_validator.py
resources/test_files/business_config/: business_config.yml
resources/test_files/calendars/: calendar_daily_block1.csv  calendar_daily_random_blocks.csv  calendar_hourly_block1.csv  calendar_hourly_random_blocks.csv
resources/test_files/catalogs/: catalog_1.yml
resources/test_files/input_three/: calendar_file.csv  pypsa_models.yml  system.yml  taxonomy.yml  view_config.yml
resources/test_files/input_two_hourly/: taxonomy.yml
resources/test_files/systems/: system_france_clusters_50_snapshots_365_period_one_year.yml  system_france_clusters_80_snapshots_168_period_one_week.yml
resources/test_files/taxonomy/: taxonomy.yml
resources/test_files/test_1/: view_config.yml
resources/test_files/test_3/: simulation_table--20260318-0623.csv  taxonomy.yml
resources/test_inputs/test_3/: library.yml  taxonomy.yml
resources/tests_inputs/filtering_and_breakdown/: calendar_file.csv
resources/tests_inputs/test_3/: calendar_file.csv  (+1 more)
src/: __init__.py  base_model.py  calendar.py  catalog.py  input_gems_business_view.py  input_system.py  library.py  location.py  metrics.py  metrics_builder.py  model_library.py  simulation.py  simulation_table.py  system.py  taxonomy.py  views.py
src/models/: __init__.py  simulation_table.py
tests/: conftest.py  test_aggregator.py  test_business_view_config.py  test_catalog.py  test_catalog_taxonomy_validator.py  test_consolidate_results.py  test_engine_equivalence.py  test_filter_simulation_table.py  test_filtering_and_breakdown.py  test_filtering_and_breakdown_property_order.py  test_input_system.py  test_loader.py  test_metric_structure_builder.py  test_model_library.py  test_taxonomy.py  test_terms_aggregator.py  test_time_aggregator.py  test_view_builder.py  test_views_input_checks.py  test_writer.py
tests/unit_tests/: test_business_view_config.py  test_catalog.py  test_filter_simulation_table.py  test_input_system.py  test_model_library.py  test_taxonomy.py
(+86 files in other folders)
