[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "GEMS-ViewsBuilder"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "polars>=1.39.2",
    "pyarrow>=14.0.0",
    "pyyaml==6.0.2",
    "pydantic>=2.11.7",
    "gemspy>=0.0.4",
]

[project.optional-dependencies]
# Install all benchmark backends: pip install -e ".[benchmark]"
benchmark = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyspark>=3.5.0",
]
# Individual backend extras
duckdb = ["duckdb>=1.0.0"]
pyarrow = ["pandas>=2.0.0"]   # pyarrow itself is already a core dep
spark = ["pyspark>=3.5.0", "pandas>=2.0.0"]
authors = [
    { name = "Antoine Oustry" },
    { name = "Dusan Paripovic" },
]
requires-python = ">=3.10"
classifiers = [
    #Classifiers here: https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/AntaresSimulatorTeam/GEMS-ViewsBuilder"
"Bug Tracker" = "https://github.com/AntaresSimulatorTeam/GEMS-ViewsBuilder/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["gems_views_builder"]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "venv", "__pycache__", ".pytest_cache", ".mypy_cache", ".ruff_cache", "resources", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["E402"]


[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
files = "gems_views_builder"
strict = true
plugins = ["pydantic.mypy"]